[package]
name = "layerses"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.5.11", features = ["runtime-tokio-native-tls", "postgres", "macros", "uuid"] }
thiserror = "1.0.30"
tokio = { version = "1.17.0", features = ["full"] }
uuid = "0.8.2"
mockall = "0.11.0"
async-trait = "0.1.52"
futures = "0.3.21"

